# netflow-gen

./: Cargo.toml  dist-workspace.toml  server.py
.github/workflows/: release.yml
src/: cli.rs  gen.rs  main.rs
