[package]
name = "netflow-gen"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/udv-group/netflow-gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
governor = "0.6.3"
ipnet = "2.9.0"
netgauze-flow-pkt = "0.3.0"
netgauze-parse-utils = "0.3.0"
rand = "0.8.5"
sysinfo = "0.30.7"
tokio = { version = "1.36.0", features = [
    "macros",
    "net",
    "time",
    "rt-multi-thread",
] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
