[package]
name = "netflow-gen"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/udv-group/netflow-gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
governor = "0.10"
ipnet = "2.9"
netgauze-flow-pkt = "0.6"
netgauze-parse-utils = "0.6"
rand = "0.9"
sysinfo = "0.35"
tokio = { version = "1", features = [
    "macros",
    "net",
    "time",
    "rt-multi-thread",
] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
